# Network-Reliability-Analyze

./: CMakeLists.txt  README.md  requirements.txt
ai/: model.py  model_store.json  train.py
backend/: main.py  smoke_test.py
backend/models/: schemas.py
backend/routes/: ai_routes.py  network.py
backend/services/: ai_bridge.py  network_engine.py  repository.py
core/: reliability.cpp
database/: network_history.db  schema.sql
docs/: report.md
frontend/: index.html
frontend/src/: App.js
frontend/src/components/: README.md
frontend/src/pages/: README.md
python/: visualize.py
report/: project_report.md
src/: graph.cpp  graph.h  main.cpp  reliability.h  simulation.cpp  simulation.h  topology.cpp  topology.h
web/: index.html  script.js  style.css
